--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server/server.js",
-    "server": "nodemon src/server/server.js"
+    "start": "node src/server/server.js",
+    "server": "node src/server/server.js"
   },
   "author": "team redlippedbatfish",
   "license": "ISC",
